[gd_scene load_steps=9 format=2]

[ext_resource path="res://Stages/Gameplay/GameplayStage.gd" type="Script" id=1]
[ext_resource path="res://Background/background.png" type="Texture" id=2]
[ext_resource path="res://Shields/Shield.tscn" type="PackedScene" id=3]
[ext_resource path="res://Invaders/Invaders.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Stages/MainMenu/text_to_play.png" type="Texture" id=6]
[ext_resource path="res://Counter/Counter.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hud/LiveCounter.tscn" type="PackedScene" id=8]

[node name="GameplayStage" type="Node2D"]
script = ExtResource( 1 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 360 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Shields" type="Node2D" parent="."]
editor/display_folded = true

[node name="Shield" parent="Shields" instance=ExtResource( 3 )]
position = Vector2( 290, 475.01 )

[node name="Shield2" parent="Shields" instance=ExtResource( 3 )]
position = Vector2( 640, 475.01 )

[node name="Shield3" parent="Shields" instance=ExtResource( 3 )]
position = Vector2( 990, 475.01 )

[node name="Invaders" parent="." instance=ExtResource( 4 )]
position = Vector2( 60, 60 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 644, 560 )

[node name="Projectiles" type="Node2D" parent="."]

[node name="Hud" type="Node2D" parent="."]

[node name="Text" type="Node2D" parent="Hud"]

[node name="Score" type="Sprite" parent="Hud/Text"]
visible = false
modulate = Color( 1, 1, 1, 0.780392 )
position = Vector2( 806, 679.5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
vframes = 7
frame = 4

[node name="Time" type="Sprite" parent="Hud/Text"]
visible = false
modulate = Color( 1, 1, 1, 0.780392 )
position = Vector2( 653, 679.5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
vframes = 7
frame = 5

[node name="Level" type="Sprite" parent="Hud/Text"]
modulate = Color( 1, 1, 1, 0.780392 )
position = Vector2( 1261.65, 678.975 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
vframes = 7
frame = 3

[node name="ScoreCounter" parent="Hud/Text" instance=ExtResource( 7 )]
visible = false
modulate = Color( 0.27451, 0.47451, 1, 1 )
position = Vector2( 906, 679.5 )
scale = Vector2( 2, 2 )
value = 72
countToRight = true

[node name="TimeCounter" parent="Hud/Text" instance=ExtResource( 7 )]
visible = false
modulate = Color( 0.27451, 0.47451, 1, 1 )
position = Vector2( 409.35, 680 )
scale = Vector2( 2, 2 )
countToRight = false

[node name="LevelCounter" parent="Hud/Text" instance=ExtResource( 7 )]
modulate = Color( 1, 0.584314, 0.270588, 1 )
position = Vector2( 1020, 678.975 )
scale = Vector2( 2, 2 )
value = 1
countToRight = false

[node name="LiveCounter" parent="Hud" instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0.780392 )
position = Vector2( 44.2595, 680 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SpawnTimers" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="SpawnTimers"]

[node name="SpawnTimer2" type="Timer" parent="SpawnTimers"]

[node name="SpawnTimer3" type="Timer" parent="SpawnTimers"]

[node name="SpawnTimer4" type="Timer" parent="SpawnTimers"]

